@@ -168,6 +168,7 @@ Fixes:
    * Fix initial value of the spinner on the first mouse move.
    * Fix elm_index to send a signal to the selected item in smart theme.
    * Focus highlight should not be shown on (0 ,0).
+   * Fix elm_conform didn't set size hint when keypad on.
    
 Removals:
 
